# biomed-multi-alignment

./: .pre-commit-config.yaml  README.md  pyproject.toml
mammal/: lora.py  main_finetune.py  metrics.py  model.py  task.py
mammal/examples/TCR_epitope_binding/: main_infer.py
mammal/examples/carcinogenicity/: pl_data_module.py
mammal/examples/dti_bindingdb_kd/: pl_data_module.py  task.py
mammal/examples/molnet/: molnet_infer.py
mammal/examples/saved_scrna_cell_type/: config.yaml
mammal/examples/scrna_cell_type/: README.md  anndata_op.py  config.yaml  pl_data_module.py  scRNA_infer.py  task.py  test_h5ad_data_file.sh
mammal/examples/scrna_cell_type/data/: README.md  Zheng68k_data_prep.ipynb  Zheng68k_to_anndata.py  clear_data_prep.ipynb  process_h5ad_data.py  zhang_data_prep.ipynb  zheng_to_anndata.py
mammal/examples/scrna_mlm/: anndata_op.py  config.yaml  pl_data_module.py  task.py
mammal/examples/scrna_mlm/data/: Zheng68k_to_anndata.py  process_h5ad_data.py
mammal/examples/tcr_epitope_binding/: main_infer.py
mammal/examples/tests/: test_TCR_epitope_binding_inference.py  test_drug_carcinogenicity_classification.py  test_dti_bindingdb_kd.py  test_main_finetune.py  test_molnet.py  test_protein_solubility_prediction.py  test_scrna_mlm.py  test_simple_inference.py  test_tcr_epitope_binding_inference.py
mammal_mcp/: .env.example  README.md  dependencies.py  pyproject.toml  server.py  tcr_epitope_binding_temp.py  util.py
tutorials/MAINFRAME_2026/: MAMMAL_finetune.ipynb  MAMMAL_inference.ipynb  MAMMAL_inference_v2.ipynb  MAMMAL_inference_wdr91.ipynb  MMELON_finetuning.ipynb  MMELON_inference.ipynb  MMELON_inference_v2.ipynb  README.md  data_and_predictions_analysis.ipynb  mammal_inference_wdr91.ipynb  mammal_utils.py
tutorials/MAINFRAME_2026/old/: MAMMAL_finetune_old1.ipynb  MAMMAL_finetune_old2.ipynb  MAMMAL_inference_v2.LZ.ipynb
